Fixing img issue

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- Project card -->
       
       <div class="bg-white rounded shadow-xl aspect-square flex flex-col hover:shadow-blue-500/50 hover:shadow-2xl transition-shadow duration-300">
-        <img class="w-full h-1/2 object-cover" src="/img/speechtranslate.png" alt="Sunset in the mountains">
+        <img class="w-full h-1/2 object-cover" src="./img/speechtranslate.png" alt="Sunset in the mountains">
         <div class="px-6 py-4 flex-grow flex flex-col justify-between">
           <a target = "_blank" href = "https://isabellawtu09.github.io/transcribe-translate/"><div>
             <h3 class="font-bold text-2xl mb-2">Speech Scribe</h3>
@@ -101,7 +101,7 @@
 
       <!-- Repeat card structure for more projects -->
       <div class="bg-white rounded shadow-xl aspect-square flex flex-col hover:shadow-blue-500/50 hover:shadow-2xl transition-shadow duration-300">
-        <img class="w-full h-1/2 object-cover" src="/img/hello-space.jpg" alt="Sunset in the mountains">
+        <img class="w-full h-1/2 object-cover" src="./img/hello-space.jpg" alt="Sunset in the mountains">
         <div class="px-6 py-4 flex-grow flex flex-col justify-between">
           <div>
             <h3 class="font-bold text-2xl mb-2">In-Space Welding</h3>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="bg-white rounded shadow-xl aspect-square flex flex-col hover:shadow-blue-500/50 hover:shadow-2xl transition-shadow duration-300">
-        <img class="w-full h-1/2 object-cover" src="/img/clap-sami-2.jpg" alt="Sunset in the mountains">
+        <img class="w-full h-1/2 object-cover" src="./img/clap-sami-2.jpg" alt="Sunset in the mountains">
         <div class="px-6 py-4 flex-grow flex flex-col justify-between">
           <div>
             <h3 class="font-bold text-xl mb-2">Robot Hosted Trivia</h3>
@@ -128,7 +128,7 @@
             <p class="text-gray-700 text-base">
               During my time at OSU, I ran user studies and tested trivia as a possible cognitive
               activity for older adults in an SNF setting with an emphasis on motivating factors.
-              Learn more about my time at OSU <a class = "text-sky-600 underline decoration-sky-600" target = "_blank" href = "/Resources/Robot Facilitated Trivia - Final deliverable (3) (1).pdf"> here.</a>
+              Learn more about my time at OSU <a class = "text-sky-600 underline decoration-sky-600" target = "_blank" href = "./Resources/Robot Facilitated Trivia - Final deliverable (3) (1).pdf"> here.</a>
 
             </p>
           </div>
