--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <title>Welcome</title>
 </head>
 
-<body class="bg-zinc-200">
+<body class="bg-zinc-200 container">
 
     <!-- Navbar -->
-    <div class="flex items-center px-6 py-4 bg-slate-100 shadow-md fixed w-full top-0 z-10">
+    <div class="flex items-center px-3 md:px-6 py-4 bg-slate-100 shadow-md fixed w-full top-0 z-10">
         <!-- Left side: Navigation links -->
-        <div class="flex space-x-6 font-mono">
+        <div class="flex space-x-1 md:space-x-6 font-mono">
             <a class="px-4" href="#home">Home</a>
             <a class="px-4" href="#about">About</a>
             <a class="px-4" href="#projects">Projects</a>
         </div>
 
         <!-- Spacer pushes icons to right -->
-        <div class="ml-auto flex space-x-8 text-xl px-8">
+        <div class="ml-auto flex space-x-3 md:space-x-6 lg:space-x-8 text-l md:text-xl px-4 md:px-8">
             <a href="https://www.linkedin.com" target="_blank" class="text-blue-700 hover:text-blue-900">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Home Section -->
-    <section id="home" class="h-screen bg-gradient-to-r flex flex-col items-center justify-center text-white text-3xl font-semibold">
+    <section id="home" class="h-screen bg-gradient-to-r flex flex-col items-center justify-center text-white text-3xl sm:text-lg">
         <h1 class="font-mono tracking-wide text-6xl font-bold bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text animate__animated animate__zoomIn animate__slow">
             Hello, I'm Joanna!
         </h1>
@@ -59,9 +59,9 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="h-screen bg-gray-200 flex flex-col items-center justify-center text-center">
-        <div class="max-w-lg">
-            <h2 class="text-4xl font-bold mb-4">About Me</h2>
+    <section id="about" class="min-h-screen bg-gray-200 flex flex-col items-center justify-center text-center">
+        <div class="max-w-lg sm:w-1/2">
+            <h2 class="text-4xl sm: text-2xl font-bold mb-4">About Me</h2>
             <p class="text-lg text-gray-700">
                 I'm a <span class = "text-green-700">computer science </span> student in my 3rd year at the <br> <span class="bg-gradient-to-r from-amber-700 via-orange-600 to-amber-400 inline-block text-transparent bg-clip-text ">University of Texas Rio Grande Valley.</span>
             </p>
@@ -73,7 +73,7 @@
     </section>
 
     <!-- Projects Section -->
-<section id="projects" class="h-screen bg-white flex items-center justify-center text-center px-6">
+<section id="projects" class="min-h-screen bg-white flex items-center justify-center text-center px-6">
   <div class="max-w-screen-lg w-full">
     <h2 class="text-4xl font-bold mb-4">My Projects</h2>
     <p class="text-lg text-gray-700 mb-8">Here are some of the projects I've worked on:</p>
