Added breakpoints for mobile screens

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Home Section -->
-    <section id="home" class="h-screen bg-gradient-to-r flex flex-col items-center justify-center text-white text-3xl sm:text-lg">
+    <section id="home" class="h-screen bg-gradient-to-r flex flex-col items-center justify-center text-white text-3xl text-xs md:text-base">
         <h1 class="font-mono tracking-wide text-6xl font-bold bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text animate__animated animate__zoomIn animate__slow">
             Hello, I'm Joanna!
         </h1>
