--- a/index.html
+++ b/index.html
@@ -135,14 +135,19 @@
         </div>
       </div>
       <div class="bg-white rounded shadow-xl aspect-square flex flex-col hover:shadow-blue-500/50 hover:shadow-2xl transition-shadow duration-300">
-        <img class="w-full h-1/2 object-cover" src="" alt="Sunset in the mountains">
+        <img class="w-full h-1/2 object-cover" src="./img/image.png" alt="Sunset in the mountains">
         <div class="px-6 py-4 flex-grow flex flex-col justify-between">
           <div>
             <h3 class="font-bold text-xl mb-2">Social media usage and emotion analysis</h3>
             <span class="bg-purple-100 text-purple-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-blue-900 dark:text-blue-300">Research</span>
-            <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-yellow-900 dark:text-yellow-300">Human-Robot Interaction</span>
+            <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-purple-900 dark:text-purple-300">Data Science</span>
             <p class="text-gray-700 text-base">
-              As an extension of my Data Science project.
+              How does the frequency of users’ social media use relate to their state of mind? <br/>
+              Specifically with how they use it, and why? As an extension of my existing data science project from this
+              Spring 2025 semester, I created a simple dashboard with some of the analysis done in regards to social media use
+              and the emotions associated with factors such as engagement, usage time, etc.
+              A more comprehensive presentation about the project can be found.
+              <a class = "text-sky-600 underline decoration-sky-600" target = "_blank" href = "./Resources/Data Science Spring 2025 (2).pdf"> here.</a>
             </p>
           </div>
         </div>
