--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <img class="w-full h-1/2 object-cover" src="./img/image.png" alt="Sunset in the mountains">
         <div class="px-6 py-4 flex-grow flex flex-col justify-between">
           <div>
+             <a target = "_blank" href = "https://socialmedia-insights.streamlit.app/">
             <h3 class="font-bold text-xl mb-2">Social media usage and emotion analysis</h3>
             <span class="bg-purple-100 text-purple-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-blue-900 dark:text-blue-300">Research</span>
             <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-purple-900 dark:text-purple-300">Data Science</span>
@@ -146,9 +147,6 @@
               Specifically with how they use it, and why? As an extension of my existing data science project from this
               Spring 2025 semester, I created a simple dashboard with some of the analysis done in regards to social media use
               and the emotions associated with factors such as engagement, usage time, etc.
-              A more comprehensive presentation about the project can be found.
-              <a class = "text-sky-600 underline decoration-sky-600" target = "_blank" href = "./Resources/Data Science Spring 2025 (2).pdf"> here.</a>
-            </p>
           </div>
         </div>
       </div>
