--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
             <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-purple-900 dark:text-purple-300">Data Science</span>
             <p class="text-gray-700 text-base">
               How does the frequency of users’ social media use relate to their state of mind? <br/>
-              Specifically with how they use it, and why? As an extension of my existing data science project from this
-              Spring 2025 semester, I created a simple dashboard with some of the analysis done in regards to social media use
-              and the emotions associated with factors such as engagement, usage time, etc.
+              Specifically with how they use it, and why? As an extension of my existing data <br/> 
+              science project from this Spring 2025 semester, I created a simple dashboard with some <br/> 
+              of the analysis done in regards to social media use and the emotions associated with factors <br/>
+              such as engagement, usage time, etc.
           </div>
         </div>
       </div>
