--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <img class="w-full h-1/2 object-cover" src="./img/speechtranslate.png" alt="Sunset in the mountains">
         <div class="px-6 py-4 flex-grow flex flex-col justify-between">
           <a target = "_blank" href = "https://isabellawtu09.github.io/transcribe-translate/"><div>
-            <h3 class="font-bold text-2xl mb-2">Speech Scribe</h3>
+            <h3 class="font-bold text-2xl mb-2 hover:text-blue-500 hover:underline">Speech Scribe</h3>
             <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-blue-900 dark:text-blue-300">Web development</span>
             <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-red-900 dark:text-red-300">Machine Learning</span>
             <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-yellow-900 dark:text-yellow-300">Natural Language Processing</span>
@@ -139,15 +139,13 @@
         <div class="px-6 py-4 flex-grow flex flex-col justify-between">
           <div>
              <a target = "_blank" href = "https://socialmedia-insights.streamlit.app/">
-            <h3 class="font-bold text-xl mb-2">Social media usage and emotion analysis</h3>
+            <h3 class="font-bold text-xl mb-2 hover:text-blue-500 hover:underline">Social media usage and emotion analysis</h3>
             <span class="bg-purple-100 text-purple-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-blue-900 dark:text-blue-300">Research</span>
             <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-purple-900 dark:text-purple-300">Data Science</span>
             <p class="text-gray-700 text-base">
-              How does the frequency of users’ social media use relate to their state of mind? <br/>
-              Specifically with how they use it, and why? As an extension of my existing data <br/>
-              science project from this Spring 2025 semester, I created a simple dashboard with some <br/>
-              of the analysis done in regards to social media use and the emotions associated with factors
-              such as engagement, usage time, etc.
+              As an extension of my existing data science project from this Spring 2025 
+              semester, I created a simple dashboard with some of the analysis done in regards to social media use 
+              and the emotions associated with factors such as engagement, usage time, etc.
           </div>
         </div>
       </div>
