Added knotions page

--- a/index.html
+++ b/index.html
@@ -149,6 +149,23 @@
           </div>
         </div>
       </div>
+
+
+      <div class="bg-white rounded shadow-xl aspect-square flex flex-col hover:shadow-blue-500/50 hover:shadow-2xl transition-shadow duration-300">
+        <img class="w-full sm:h-1/2 object-cover" src="./img/catknot.png" alt="Sunset in the mountains">
+        <div class="px-6 py-4 flex-grow flex flex-col justify-between">
+          <div>
+             <a target = "_blank" href = "https://isabellawtu09.github.io/knotions-crochet/">
+            <h3 class="font-bold text-xl mb-2 hover:text-blue-500 hover:underline">Knotions</h3>
+            <span class="bg-purple-100 text-purple-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-blue-900 dark:text-pink-300">Hobbies</span>
+            <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-purple-900 dark:tex-gray-300">Cat</span>
+            <p class="text-gray-700 text-base">
+              I created this page as a way to brainstorm
+              and hopefully create something fun and cuddly!
+        </div>
+      </div>
+
+
     </div>
   </div>
 </section>
