switched pdf paths

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <em>During my time at OSU, I ran user studies and tested trivia as a possible cognitive and social activity for older adults in an SNF setting with an emphasis on motivating factors.</em>
       <img src="./img/ovh-photo.jpg" alt="Trivia Task robot interaction">
       <div class="card-links">
-        <a href="./Resources/robot_trivia.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> View PDF</a>
+        <a href="https://drive.google.com/file/d/1PgwMp8s8ZiYyKd38vXPQzV-TNreOdIIk/view?usp=sharing" target="_blank"><i class="fa-solid fa-file-pdf"></i> View PDF</a>
       </div>
     </article>
 
@@ -156,7 +156,7 @@
       <em>2025 HackR research hackathon project winner!</em>
       <img src="./img/hackr.png" alt="Burnout Bots project">
       <div class="card-links">
-        <a href="./Resources/hackr2025.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> View PDF</a>
+        <a href="https://drive.google.com/file/d/1S-eAcGf4pf7OnwGmiT74duUrxeE_8Eoi/view?usp=sharing" target="_blank"><i class="fa-solid fa-file-pdf"></i> View PDF</a>
       </div>
     </article>
 
@@ -169,7 +169,7 @@
       <div class="card-links">
  
         <a href="#" class="slides-trigger" data-slideshow="AquaMundi-slides"><i class="fa-solid fa-images"></i> View Slides</a>
-        <a href="./Resources/certificate.pdf" target="_blank"><i class="fa-solid fa-file-pdf"></i> View Certificate</a>
+        <a href="https://drive.google.com/file/d/1PeJ0lgEBYuBO24gNTqICoYD2b-A1Bv7r/view?usp=sharing" target="_blank"><i class="fa-solid fa-file-pdf"></i> View Certificate</a>
       </div>
     </article>
 
