--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="min-h-screen bg-gray-200 flex flex-col items-center  text-center">
-        <div class="max-w-lg sm:w-1/2">
+
+  <section id="about" class="min-h-screen w-full bg-gray-200 flex flex-col items-center">
+    <div class="max-w-lg w-full px-6 mx-auto flex flex-col items-center text-center">
             <h2 class="text-4xl sm: text-2xl font-bold mb-4 mt-20">About Me</h2>
-            <div class="news-container">
+            <div class="news-container w-full">
 
         <div class="timeline-item">
             <div class="dot"></div>
@@ -118,8 +119,8 @@
     </section>
 
     <!-- Projects Section -->
-<section id="projects" class="min-h-screen bg-white flex flex-col items-center justify-center px-6">
-  <h2 class="text-4xl font-bold mb-10 mt-20">Projects</h2>
+    <section id="projects" class="min-h-screen w-full bg-white flex flex-col items-center justify-center px-6">
+      <h2 class="text-4xl font-bold mb-10 mt-20">Projects</h2>
   
   <section class="card-stack" style="--n: 6; --k: 0">
     <article class="stack-card" style="--i: 0; --a: 5deg">
