add mx, remove container

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-<body class="bg-zinc-200 container">
+<body class="bg-zinc-200 mx-auto">
 
     <!-- Navbar -->
     <div class="flex items-center px-3 md:px-6 py-4 bg-slate-100 shadow-md fixed w-full top-0 z-10">
@@ -76,9 +76,9 @@
 
     <!-- About Section -->
 
-  <section id="about" class="min-h-screen w-full bg-gray-200 flex flex-col items-center">
-    <div class="max-w-lg w-full px-6 mx-auto flex flex-col items-center text-center">
-            <h2 class="text-4xl sm: text-2xl font-bold mb-4 mt-20">About Me</h2>
+    <section id="about" class="min-h-screen w-full bg-gray-200 flex flex-col items-center">
+      <div class="w-full max-w-2xl px-6 mx-auto flex flex-col items-center text-center">
+          <h2 class="text-4xl font-bold mb-4 mt-20">About Me</h2>
             <div class="news-container w-full">
 
         <div class="timeline-item">
